chote: update gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # Miscellaneous
 *.class
 *.log
@@ -8,6 +10,8 @@
 .buildlog/
 .history
 .svn/
+.fvm/
+.fvm/flutter_sdk
 
 # IntelliJ related
 *.iml
@@ -35,3 +39,4 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
